dev-bkpd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bkextest
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "bke-ci-eab"

spec:
  rules:
  - host: dbkestest.virtorch.brown.edu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: bkextest
            port: 
              number: 8080
